fix bar spacing

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -113,8 +113,8 @@ p span{
 
 .GBAR{
     background-color: black;
-    height: 300px;
-    padding: 4% 0 2% 0;
+    height: 200px;
+    padding: 2% 0 2% 0;
 }
 
 .cont3 ul li{
